--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ main {
   background: #11101d;
   padding: 6px 14px;
   transition: all 0.5s ease;
+  z-index: 1;
 }
 
 .sidebar.active{
@@ -287,6 +288,7 @@ main {
 }
 
 .intro {
+  z-index: 99;
   background: black;
   position: fixed;
   top: 0;
